--- a/template/view/html/common/footer.html
+++ b/template/view/html/common/footer.html
@@ -88,7 +88,7 @@
     <div class="col-md-4 col-sm-12 col-xs-12">
         <div class="col-md-12">
             <div class="row">
-                <div class="galley-pro">
+                <div class="galley-pro gallery-mb">
                     <a href="https://my.rotary.org/en/news-media/office-president/ri-president" target="_blank">
                         <div class="img-body">
                             <img src="template/view/dist/images/Barry_Rassin.jpg" class="images-responsive">
@@ -151,7 +151,7 @@
     <div class="col-md-4 col-sm-12 col-xs-12">
         <div class="col-md-12">
             <div class="row">
-                <div class="galley-pro">
+                <div class="galley-pro gallery-mb">
                     <a href="javascript:;">
                         <div class="img-body">
                             <img src="template/view/dist/images/HST.jpg" class="images-responsive">
