--- a/template/view/html/club/trf_form.html
+++ b/template/view/html/club/trf_form.html
@@ -24,57 +24,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="col-md-3 mt-20">
-                                <div class="club-login-details">
-                                    <div class="page-title">Club Details</div>
-                                    <p class="image-sep"><img src="<?php echo $thumb; ?>"></p>
-                                    <hr class="featurette-divider">
-                                    <p class="seprate-p">Rotary Club of
-                                        <b><?php echo $club_name; ?></b></p>
-
-                                    <p class="combine-p"><span><i class="fa fa-calendar-o"></i>
-                                            <?php echo $date; ?></span><span class="pull-right"><i
-                                                class="fa fa-trophy"></i> 250</span></p>
-                                    <p class="combine-p"><span><i class="fa fa-phone"></i> <a
-                                                href="tel:<?php echo $mobile; ?>">
-                                                <?php echo $mobile; ?></a></span></p>
-                                    <p class="combine-p"><span><i class="fa fa-envelope-o"></i><a
-                                                href="mailto:<?php echo $email; ?>">
-                                                <?php echo $email; ?></a></span>
-                                    </p>
-                                    <hr class="featurette-divider">
-                                    <p class="seprate-p"><b>President</b> - <?php echo $president; ?></p>
-                                    <p class="seprate-p"><b>Ass. Governor</b> - <?php echo $assistant_governor; ?></p>
-                                    <p class="seprate-p"><b>Dist. Secretary</b> - <?php echo $district_secretary; ?></p>
-                                </div>
-                                <div id="mobile-menu">
-                                    <a href="javascript:;" class="bars"><i class="fa fa-bars mobile-bars"></i></a>
-                                    <div class="mobile-drop">
-                                        <ul id="page-menu">
-                                            <li>
-                                                <a href="<?php echo $dashboard; ?>"><?php echo $text_dashboard; ?></a>
-                                            </li>
-                                            <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
-                                            <li><a href="<?php echo $trf; ?>"
-                                                    class="active-menu"><?php echo $text_trf; ?></a></li>
-                                            <li><a href="<?php echo $project; ?>"><?php echo $text_project; ?></a></li>
-                                            <li><a href="<?php echo $profile; ?>"><?php echo $text_profile; ?></a></li>
-                                            <li><a href="<?php echo $logout; ?>"><?php echo $text_logout; ?></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="desktop-drop">
-                                    <ul id="page-menu">
-                                        <li>
-                                            <a href="<?php echo $dashboard; ?>"><?php echo $text_dashboard; ?></a>
-                                        </li>
-                                        <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
-                                        <li><a href="<?php echo $trf; ?>"
-                                                class="active-menu"><?php echo $text_trf; ?></a></li>
-                                        <li><a href="<?php echo $project; ?>"><?php echo $text_project; ?></a></li>
-                                        <li><a href="<?php echo $profile; ?>"><?php echo $text_profile; ?></a></li>
-                                        <li><a href="<?php echo $logout; ?>"><?php echo $text_logout; ?></a></li>
-                                    </ul>
-                                </div>
+                                <?php echo  $navpage; ?>
                             </div>
                             <div class="col-md-9 mt-20">
                                 <div class="about-page-content">
@@ -88,8 +38,8 @@
                                         <form action="<?php echo $action; ?>" method="post"
                                             enctype="multipart/form-data">
                                             <div class="form-group row">
-                                                <label for="month" class="col-sm-3 col-form-label">Month :</label>
                                                 <div class="col-sm-3">
+                                                    <label for="month">Month </label>
                                                     <?php
                                                         $timestamp = time();
 
@@ -108,8 +58,8 @@
                                                     print $month_html;
                                                     ?>
                                                 </div>
-                                                <label for="year" class="col-sm-3 col-form-label">Year :</label>
                                                 <div class="col-sm-3">
+                                                    <label for="year">Year </label>
                                                     <?php
                                                     $year_html = '<select name="year" id="year" class="form-control">';
                                                     $previ_year = date("Y",strtotime("-1 year"));    
@@ -126,44 +76,43 @@
                                             </div>
                                             <hr class="featurette-divider">
                                             <div class="form-group row">
-                                                <label for="inputamount_inr" class="col-sm-3 col-form-label">Amount
-                                                    in INR :</label>
                                                 <div class="col-sm-3">
+                                                    <label for="inputamount_inr">Amount
+                                                        in INR </label>
                                                     <input type="number" class="form-control" name="amount_inr"
                                                         id="amount_inr" required="">
                                                 </div>
-                                                <label for="inputexchange_rate" class="col-sm-3 col-form-label">Exchange
-                                                    Rate :</label>
                                                 <div class="col-sm-3">
+                                                    <label for="inputexchange_rate">Exchange
+                                                        Rate </label>
                                                     <input type="number" class="form-control" name="exchange_rate"
                                                         id="exchange_rate" required="">
                                                 </div>
-                                            </div>
-                                            <hr class="featurette-divider">
-                                            <div class="form-group row">
-                                                <label for="inputamount_usd" class="col-sm-3 col-form-label">Amount in
-                                                    USD
-                                                    :</label>
                                                 <div class="col-sm-3">
+                                                    <label for="inputamount_usd">Amount in
+                                                        USD
+                                                    </label>
                                                     <input type="number" class="form-control" name="amount_usd"
                                                         id="amount_usd" required="" readonly>
                                                 </div>
-                                                <label for="inputpoints" class="col-sm-3 col-form-label">Citation
-                                                    Points Accrued :</label>
                                                 <div class="col-sm-3">
+                                                    <label for="inputpoints">Citation
+                                                        Points Accrued </label>
                                                     <input type="number" class="form-control" name="points" id="points"
                                                         required="">
                                                 </div>
                                             </div>
-                                            <input type="hidden" name="club_id" id="club_id"
-                                                value="<?php echo $club_id; ?>">
                                             <hr class="featurette-divider">
                                             <div class="form-group row">
-                                                <label for="" class="col-sm-6 pull-left">
-                                                    Total TRF
-                                                    Contribution(Doller) : <?php echo round($total_trf); ?>
-                                                </label>
-                                                <button type="submit" class="btn btn-sav mb-2">Save</button>
+                                                <div class="col-sm-12">
+                                                    <input type="hidden" name="club_id" id="club_id"
+                                                        value="<?php echo $club_id; ?>">
+                                                    <label for="" class="col-sm-6">
+                                                        Total TRF
+                                                        Contribution(Doller) : <?php echo round($total_trf); ?>
+                                                    </label>
+                                                    <button type="submit" class="btn btn-sav mb-2">Save</button>
+                                                </div>
                                             </div>
                                             <hr class="featurette-divider">
                                         </form>
@@ -175,7 +124,7 @@
                 </div>
             </div>
             <?php echo $footer; ?>
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+            <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script> -->
             <script>
                 $(function () {
 
