--- a/template/view/html/club/view_member.html
+++ b/template/view/html/club/view_member.html
@@ -24,57 +24,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="col-md-3 mt-20">
-                                <div class="club-login-details">
-                                    <div class="page-title">Club Details</div>
-                                    <p class="image-sep"><img src="<?php echo $thumb; ?>"></p>
-                                    <hr class="featurette-divider">
-                                    <p class="seprate-p">Rotary Club of
-                                        <b><?php echo $club_name; ?></b></p>
-
-                                    <p class="combine-p"><span><i class="fa fa-calendar-o"></i>
-                                            <?php echo $date; ?></span><span class="pull-right"><i
-                                                class="fa fa-trophy"></i> 250</span></p>
-                                    <p class="combine-p"><span><i class="fa fa-phone"></i> <a
-                                                href="tel:<?php echo $mobile; ?>">
-                                                <?php echo $mobile; ?></a></span></p>
-                                    <p class="combine-p"><span><i class="fa fa-envelope-o"></i><a
-                                                href="mailto:<?php echo $email; ?>">
-                                                <?php echo $email; ?></a></span>
-                                    </p>
-                                    <hr class="featurette-divider">
-                                    <p class="seprate-p"><b>President</b> - <?php echo $president; ?></p>
-                                    <p class="seprate-p"><b>Ass. Governor</b> - <?php echo $assistant_governor; ?></p>
-                                    <p class="seprate-p"><b>Dist. Secretary</b> - <?php echo $district_secretary; ?></p>
-                                </div>
-                                <div id="mobile-menu">
-                                    <a href="javascript:;" class="bars"><i class="fa fa-bars mobile-bars"></i></a>
-                                    <div class="mobile-drop">
-                                        <ul id="page-menu">
-                                            <li>
-                                                <a href="<?php echo $dashbaord; ?>"
-                                                    class="active-menu"><?php echo $text_dashboard; ?></a>
-                                            </li>
-                                            <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
-                                            <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
-                                            <li><a href="<?php echo $project; ?>"><?php echo $text_project; ?></a></li>
-                                            <li><a href="<?php echo $profile; ?>"><?php echo $text_profile; ?></a></li>
-                                            <li><a href="<?php echo $logout; ?>"><?php echo $text_logout; ?></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="desktop-drop">
-                                    <ul id="page-menu">
-                                        <li>
-                                            <a href="<?php echo $dashbaord; ?>"><?php echo $text_dashboard; ?></a>
-                                        </li>
-                                        <li><a href="<?php echo $member; ?>"
-                                                class="active-menu"><?php echo $text_member; ?></a></li>
-                                        <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
-                                        <li><a href="<?php echo $project; ?>"><?php echo $text_project; ?></a></li>
-                                        <li><a href="<?php echo $profile; ?>"><?php echo $text_profile; ?></a></li>
-                                        <li><a href="<?php echo $logout; ?>"><?php echo $text_logout; ?></a></li>
-                                    </ul>
-                                </div>
+                                <?php echo  $navpage; ?>
                             </div>
                             <div class="col-md-9 mt-20">
                                 <div class="about-page-content">
@@ -88,51 +38,49 @@
                                         <form action="<?php echo $action; ?>" method="post"
                                             enctype="multipart/form-data">
                                             <div class="form-group row">
-                                                <label for="month" class="col-sm-3 col-form-label">Month :</label>
                                                 <div class="col-sm-3">
+                                                    <label for="month">Month </label>
                                                     <input type="number" class="form-control" name="month" id="month"
                                                         value="<?php echo $month; ?>" readonly="">
                                                 </div>
-                                                <label for="year" class="col-sm-3 col-form-label">Year :</label>
                                                 <div class="col-sm-3">
-                                                    <input type="number" class="form-control" name="month" id="month"
+                                                    <label for="year"">Year </label>
+                                                    <input type=" number" class="form-control" name="month" id="month"
                                                         value="<?php echo $year; ?>" readonly="">
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
                                             <div class="form-group row">
-                                                <label for="inputmember_induct" class="col-sm-3 col-form-label">Members
-                                                    Inducted :</label>
                                                 <div class="col-sm-3">
+                                                    <label for="inputmember_induct">Members
+                                                        Inducted </label>
                                                     <input type="number" class="form-control" name="member_induct"
                                                         id="member_induct" value="<?php echo $member_induct; ?>"
                                                         readonly="">
                                                 </div>
-                                                <label for="inputmember_unlist" class="col-sm-3 col-form-label">Members
-                                                    Unlisted :</label>
                                                 <div class="col-sm-3">
+                                                    <label for="inputmember_unlist">Members
+                                                        Unlisted </label>
                                                     <input type="number" class="form-control" name="member_unlist"
                                                         id="member_unlist" value="<?php echo $member_unlist; ?>"
                                                         readonly="">
                                                 </div>
-                                            </div>
-                                            <hr class="featurette-divider">
-                                            <div class="form-group row">
-                                                <label for="inputnet_growth" class="col-sm-3 col-form-label">Net Growth
-                                                    :</label>
-                                                <div class="col-sm-3">
-                                                    <input type="number" class="form-control" name="net_growth"
+                                                <div class=" col-sm-3">
+                                                    <label for="inputnet_growth"">Net Growth</label>
+                                                    <input type=" number" class="form-control" name="net_growth"
                                                         id="net_growth" value="<?php echo $net_growth; ?>" readonly="">
                                                 </div>
-                                                <label for="inputpoint_accumulate"
-                                                    class="col-sm-3 col-form-label">Citation Points Accrued :</label>
                                                 <div class="col-sm-3">
+                                                    <label for="inputpoint_accumulate">Citation
+                                                        Points Accrued </label>
+
                                                     <input type="number" class="form-control" name="point_accumulate"
                                                         id="point_accumulate" value="<?php echo $point_accumulate; ?>"
                                                         readonly="">
+
                                                 </div>
                                             </div>
-
+                                            <hr class="featurette-divider">
                                         </form>
                                     </div>
                                 </div>
