--- a/template/view/html/club/view_project.html
+++ b/template/view/html/club/view_project.html
@@ -24,57 +24,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="col-md-3 mt-20">
-                                <div class="club-login-details">
-                                    <div class="page-title">Club Details</div>
-                                    <p class="image-sep"><img src="<?php echo $thumb; ?>"></p>
-                                    <hr class="featurette-divider">
-                                    <p class="seprate-p">Rotary Club of
-                                        <b><?php echo $club_name; ?></b></p>
-
-                                    <p class="combine-p"><span><i class="fa fa-calendar-o"></i>
-                                            <?php echo $date; ?></span><span class="pull-right"><i
-                                                class="fa fa-trophy"></i> 250</span></p>
-                                    <p class="combine-p"><span><i class="fa fa-phone"></i> <a
-                                                href="tel:<?php echo $mobile; ?>">
-                                                <?php echo $mobile; ?></a></span></p>
-                                    <p class="combine-p"><span><i class="fa fa-envelope-o"></i><a
-                                                href="mailto:<?php echo $email; ?>">
-                                                <?php echo $email; ?></a></span>
-                                    </p>
-                                    <hr class="featurette-divider">
-                                    <p class="seprate-p"><b>President</b> - <?php echo $president; ?></p>
-                                    <p class="seprate-p"><b>Ass. Governor</b> - <?php echo $assistant_governor; ?></p>
-                                    <p class="seprate-p"><b>Dist. Secretary</b> - <?php echo $district_secretary; ?></p>
-                                </div>
-                                <div id="mobile-menu">
-                                    <a href="javascript:;" class="bars"><i class="fa fa-bars mobile-bars"></i></a>
-                                    <div class="mobile-drop">
-                                        <ul id="page-menu">
-                                            <li>
-                                                <a href="<?php echo $dashbaord; ?>"><?php echo $text_dashboard; ?></a>
-                                            </li>
-                                            <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
-                                            <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
-                                            <li><a href="<?php echo $project; ?>"
-                                                    class="active-menu"><?php echo $text_project; ?></a></li>
-                                            <li><a href="<?php echo $profile; ?>"><?php echo $text_profile; ?></a></li>
-                                            <li><a href="<?php echo $logout; ?>"><?php echo $text_logout; ?></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="desktop-drop">
-                                    <ul id="page-menu">
-                                        <li>
-                                            <a href="<?php echo $dashbaord; ?>"><?php echo $text_dashboard; ?></a>
-                                        </li>
-                                        <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
-                                        <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
-                                        <li><a href="<?php echo $project; ?>"
-                                                class="active-menu"><?php echo $text_project; ?></a></li>
-                                        <li><a href="<?php echo $profile; ?>"><?php echo $text_profile; ?></a></li>
-                                        <li><a href="<?php echo $logout; ?>"><?php echo $text_logout; ?></a></li>
-                                    </ul>
-                                </div>
+                                <?php echo  $navpage; ?>
                             </div>
                             <div class="col-md-9 mt-20">
                                 <div class="about-page-content">
@@ -85,90 +35,85 @@
                                             style="float: right !important;"><i class="fa fa-reply"></i></a>
                                     </div>
                                     <div class="club-page-content">
-                                        <form action="<?php echo $action; ?>" method="post"
-                                            enctype="multipart/form-data">
+                                        <?php foreach($projects as $project){ ?>
+                                        <form action="" method="post" enctype="multipart/form-data">
+                                            <?php 
+                                            $date =  $project['date']; 
+                                            $date = explode('-', $date);
+
+                                            $year = $date[0];
+                                            $month= $date[1];
+                                            ?>
                                             <div class="form-group row">
-                                                <label for="month" class="col-sm-3 col-form-label">Month :</label>
-                                                <div class="col-sm-4">
+                                                <div class="col-sm-3">
+                                                    <label for="month">Month :</label>
                                                     <input type="text" class="form-control" name="month" id="month"
-                                                        readonly>
+                                                        value="<?php echo $month; ?>" readonly>
                                                 </div>
-                                                <label for="year" class="col-sm-1 col-form-label">Year :</label>
-                                                <div class="col-sm-4">
+                                                <div class="col-sm-3">
+                                                    <label for="year">Year :</label>
                                                     <input type="text" class="form-control" name="year" id="year"
-                                                        readonly>
+                                                        value="<?php echo $year; ?>" readonly>
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
                                             <div class="form-group row">
-                                                <label for="title" class="col-sm-3 col-form-label">Projects
-                                                    Title:</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
+                                                    <label for="title">Projects
+                                                        Title:</label>
                                                     <input type="text" class="form-control" name="title" id="title"
-                                                        readonly>
+                                                        value="<?php echo  $project['title']; ?>" readonly>
                                                 </div>
-                                            </div>
-                                            <hr class="featurette-divider">
-                                            <div class="form-group row">
-                                                <label for="description" class="col-sm-3 col-form-label">Description
-                                                    :</label>
-                                                <div class="col-sm-9">
-                                                    <textarea name="description" id="description" class="form-control"
-                                                        readonly></textarea>
-                                                </div>
-                                            </div>
-                                            <hr class="featurette-divider">
-                                            <div class="form-group row">
-                                                <label for="amount" class="col-sm-3 col-form-label">Project Cost
-                                                    (&#8377;)
-                                                    :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
+                                                    <label for="amount">Project Cost
+                                                        (&#8377;)
+                                                        :</label>
                                                     <input type="number" class="form-control" name="amount" id="amount"
-                                                        readonly>
+                                                        value="<?php echo $project['amount']; ?>" readonly>
                                                 </div>
-                                            </div>
-                                            <hr class="featurette-divider">
-                                            <div class="form-group row">
-                                                <label for="no_of_beneficiary" class="col-sm-3 col-form-label">Number of
-                                                    beneficiaries
-                                                    :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
+                                                    <label for="no_of_beneficiary">Number of
+                                                        beneficiaries
+                                                        :</label>
                                                     <input type="number" class="form-control" name="no_of_beneficiary"
-                                                        id="no_of_beneficiary" readonly>
+                                                        id="no_of_beneficiary"
+                                                        value="<?php echo $project['no_of_beneficiary']; ?>" readonly>
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
                                             <div class="form-group row">
-                                                <label for="image" class="col-sm-3 col-form-label">Image:</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-4">
+                                                    <label for="image">Image:</label>
                                                     <div class="img-section">
+                                                        <?php $n=1; ?>
+                                                        <?php foreach($images as $image): ?>
                                                         <div class="image-upload">
-                                                            <a class="img-thumbnail" id="thumb-img1">
-                                                                <img id="preview1" src="<?php echo $thumb; ?>">
+                                                            <a class="img-thumbnail" id="thumb-img<?php echo $n++; ?>">
+                                                                <img id="preview<?php echo $n++; ?>"
+                                                                    src="<?php echo $image['thumb2']; ?>">
                                                             </a>
-                                                            <input type="hidden" id="input_img1" name="image[]"
-                                                                value="" />
+                                                            <input type="hidden" id="input_img<?php echo $n++; ?>"
+                                                                name="image[]" value="" />
                                                         </div>
-                                                        <div class="image-upload">
-                                                            <a class="img-thumbnail" id="thumb-img2" data-toggle="modal"
-                                                                data-target="#uploadModal2">
-                                                                <img id="preview2" src="<?php echo $thumb; ?>">
-                                                            </a>
-                                                            <input type="hidden" id="input_img2" name="image[]"
-                                                                value="" />
-                                                        </div>
+                                                        <?php endforeach; ?>
                                                     </div>
-                                                    <small class="text-muted">Need high resolution images, maximum two
-                                                        allowed</small>
+                                                </div>
+                                                <div class="col-sm-8">
+                                                    <label for="description">Description
+                                                        :</label>
+                                                    <textarea name="description" id="description" class="form-control"
+                                                        rows="5"
+                                                        readonly><?php echo $project['description']; ?></textarea>
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
                                             <div class="form-group row">
-                                                <label for="category" class="col-sm-3 col-form-label">Category :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-12">
+                                                    <label for="category[]">Category
+                                                        :</label>
                                                     <div class="row">
                                                         <?php foreach($categoires as $category): ?>
-                                                        <div class="col-sm-6">
+                                                        <div class="col-sm-4">
                                                             <div class="checkbox checkbox-primary">
                                                                 <input id="category" name="category[]"
                                                                     value="<?php echo $category['category_id']; ?>"
@@ -184,15 +129,16 @@
                                             </div>
                                             <hr class="featurette-divider">
                                             <div class="form-group row">
-                                                <label for="points" class="col-sm-3 col-form-label">Citation points
-                                                    accrued
-                                                    :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
+                                                    <label for="points">Citation points
+                                                        accrued
+                                                        :</label>
                                                     <input type="number" class="form-control" id="points" name="points"
-                                                        readonly>
+                                                        value="<?php echo $project['points']; ?>" readonly>
                                                 </div>
                                             </div>
                                         </form>
+                                        <?php } ?>
                                     </div>
                                 </div>
                             </div>
