--- a/template/view/html/club/dashboard.html
+++ b/template/view/html/club/dashboard.html
@@ -74,7 +74,12 @@
                                             </div>
                                         </div>
                                     </div>
-
+                                    <div class="col-md-12 col-sm-12">
+                                        <a href="<?php echo $add_data; ?>" data-toggle="tooltip" title=""
+                                            class="btn btn-login btn-lg" data-original-title="Add New Data"><i
+                                                class="fa fa-plus"></i> Add New
+                                            Data</a>
+                                    </div>
                                     <div class="club-page-content">
                                         <div class="page-title">
                                             <?php echo $text_latest_member; ?>
