exchange rate section added

--- a/admin/view/html/catalog/club_list.html
+++ b/admin/view/html/catalog/club_list.html
@@ -140,7 +140,7 @@
                                                 <?php echo $club['website']; ?>
                                             </td>
                                             <td class="text-left">
-                                                <?php if($user_group =='Austin Governor') : ?>
+                                                <?php if($user_group =='Assit Governor') : ?>
                                                 <a href="<?php echo $club['view']; ?>"
                                                    data-toggle="tooltip" title="<?php echo $button_view; ?>"
                                                    class="btn btn-primary"><i class="fa fa-eye"></i></a>
